# heftie-textbook

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pre-commit.yml
book/: 1-storage.md  2-creation.md  3-processing.md  3-remote.md  4-export.md  4-processing.md  5-visualising.md  _config.yml  _toc.yml  appendices.md  data_helpers.py  data_storage.md  home.md  intro.md  introduction.md  myst.yml
book/data/hoa_heart.zarr/: .zarray  0.0.0  0.0.1  0.0.2  0.1.0  0.1.1  0.1.2  1.0.0  1.0.1  1.0.2  1.1.0  1.1.1  1.1.2
other/: create_sample_data.py
