[project]
name = "heftie-textbook"
version = "0.1.0"
description = "A digital textbook for working with huge 3D imaging datasets"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "imageio[tifffile]==2.37.0",
    "jupyter-book==1.0.4",
    "matplotlib==3.10.1",
    "numcodecs==0.15.1",
    "numpy==2.2.4",
    "sphinxcontrib-mermaid==1.0.0",
    "zarr==2.18.4",
    "rich==13.9.4",
    "pydantic-zarr==0.7.0",
    "ome-zarr-models==0.1.5",
]

[tool.setuptools]
packages = []

[dependency-groups]
dev = ["jupyterlab==4.3.0", "jupytext==1.16.4"]
