[project]
name = "heftie-textbook"
version = "0.1.0"
description = "A digital textbook for working with huge 3D imaging datasets"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "imageio[tifffile]==2.37.0",
    "jupyter-book==2.0.0b2",
    "matplotlib==3.10.3",
    "numcodecs==0.15.1",
    "numpy==2.3.2",
    "zarr==2.18.7",
    "rich==14.1.0",
    "pydantic-zarr==0.7.0",
    "ome-zarr-models==0.1.9",
    "joblib==1.5.1",
]

[tool.setuptools]
packages = []

[dependency-groups]
dev = [
    "jupyter-ruff>=0.3.0",
    "jupyterlab==4.3.0",
 "jupytext==1.16.4",
]
